--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/images/adobe-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Adobe Firefly</title>
+    <title>Tesla Bot</title>
   </head>
   <body>
     <div id="container" class="absolute top-0 left-0 w-full h-screen"></div>
@@ -23,7 +23,7 @@
 					<div class=" blur-css text-xl w-[350px] flex-col">
 						<div class="w-full flex justify-between items-center cursor-pointer">
 							<div class="flex items-center  sm:py-1 py-4 gap-2">
-								<h1 class="sm:block hidden ">Adobe Firefly</h1>
+								<h1 class="sm:block hidden ">Tesla Bot</h1>
 								<img class="w-10 sm:hidden" src="/images/logo.png" alt="">
 								<div class="rect w-[5px] opacity-0 sm:opacity-100 h-[5px] rotate-45 bg-white ">
 								</div>
@@ -165,7 +165,7 @@
 
     <main class="min-h-screen w-full relative z-10 text-white">
       <section id="hero" class="hero h-screen relative flex flex-col items-center justify-center">
-        <h1 class="text-[8vw] text-center w-[65%] mx-auto leading-none">Create with <span class="italic">Firefly</span> generative AI.</h1>
+        <h1 class="text-[8vw] text-center w-[65%] mx-auto leading-none">The AI powered <span class="italic">Tesla</span> Bot.</h1>
       </section>
 
 
@@ -208,9 +208,9 @@
           <div class="flex justify-between items-center sm:px-12 px-4">
             <h1
               class="text-[12vw] bg-teal-40 w-fit whitespace-nowrap font-neuehaas leading-none tracking-wide font-bold antialiased">
-              Adobe Firefly</h1>
+              Tesla Bot</h1>
             <div class="w-full sm:block hidden sm:w-[20%]  h-full ">
-              <h5 class="text-[0.9vw] font-neuehaas font-semibold tracking-wider uppercase">A list of features adobe firefly does for you</h5>
+              <h5 class="text-[0.9vw] font-neuehaas font-semibold tracking-wider uppercase">A list of features tesla bot does for you</h5>
               <div class="flex mt-4 gap-2">
                 <div class="h-12 rounded-[5px] border aspect-card grid place-items-center">
                   <h1 class="font-grotesk font-semibold">G</h1>
@@ -275,7 +275,7 @@
 
 					<h1
 						class="w-[75vw] py-12 mt-[6vw] text-[3.5vw] leading-none text-white font-neuehaas tracking-wider font-semibold">
-						How Adobe <br> firefly works behind the scenes</h1>
+						How Tesla Bot<br> works behind the scenes</h1>
 
 					<div class="container absolute bottom-[5vw] flex justify-center items-center w-full">
 						<img class="motion-image w-[50px] h-[50px] sm:w-[100px] sm:h-[100px] absolute"
@@ -402,7 +402,7 @@
               </div>
               <div class="w-fit follow__parts t whitespace-nowrap flex items-center sm:gap-16 gap-8 py-5">
                 <h1
-                  class="text-white sm:text-[250px] text-[160px] leading-none font-neuehaas font-bold tracking-wide">
+                  class="text-white sm:text-[250px] text-[150px] leading-none font-neuehaas font-bold tracking-wide">
                   LET'S MAKE YOUR VISION INTO REALITY
                 </h1>
                 <span
@@ -416,7 +416,7 @@
   
           <div
             class="w-full h-[20%] sm:h-[19%] bg-[#00000] flex  sm:flex-row flex-col sm:items-center justify-center gap-4 sm:justify-between sm:px-12 px-6">
-            <h1 class="font-neuehaas tracking-wider opacity-40 font-bold">Copyright © 2024 Adobe. All rights reserved.</h1>
+            <h1 class="font-neuehaas tracking-wider opacity-40 font-bold">Copyright © 2024 Tesla. All rights reserved.</h1>
             <a class="font-neuehaas text-lg sm:text-2xl tracking-wide font-bold" href="#hero">Back to top ↑</a>
           </div>
         </footer>
